pods/ingress-definition.yaml
apiVersion: v1items:
            - apiVersion: networking.k8s.io/v1beta1
              kind: Ingress  metadata:
                      annotations:
                        kubectl.kubernetes.io/last-applied-configuration: |
                          {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"creationTimestamp":"2020-05-20T00:15:40Z","generation":1,"name":"ingress-wear-watch","namespace":"app-space","resourceVersion":"1176","selfLink":"/apis/networking.k8s.io/v1beta1/namespaces/app-space/ingresses/ingress-wear-watch","uid":"f53f9ee6-3612-429d-bdd2-fe5f06d5c09b"},"spec":{"ru [...]
                        nginx.ingress.kubernetes.io/ssl-redirect: "false"    creationTimestamp: "2020-05-20T00:15:40Z"
                      generation: 2
                      name: ingress-wear-watch
                      namespace: app-space
                      resourceVersion: "3840"    selfLink: /apis/networking.k8s.io/v1beta1/namespaces/app-space/ingresses/ingress-wear-watch
                      uid: f53f9ee6-3612-429d-bdd2-fe5f06d5c09b
              spec:
                rules:
                  - http:
                      paths:
                        - backend:
                            serviceName: wear-service
                            servicePort: 8080
                          path: /wear
                        - backend:
                            serviceName: video-service
                            servicePort: 8080
                          path: /stream
                        - backend:
                            serviceName: food-service
                            servicePort: 8080
                          path: /eat
              status:
                loadBalancer:
                  ingress:
                    - {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
